# Cyber_Cafe_Management_System

Code/: CMakeCache.txt  CMakeLists.txt  Computer.cpp  Computer.d  Computer.h  Customer.cpp  Customer.d  Customer.h  Helper.cpp  Helper.d  Helper.h  Makefile  Owner.cpp  Owner.h  Records.csv  User.cpp  User.d  User.h  cmake_install.cmake  cybercafemanagementsystem.db  main.cpp  main.d  main.filters  shell.d
Code/AssemblyCode/: Computer.s  Customer.s  Helper.s  Owner.s  User.s  main.s
Code/Server/: Computer.cpp  Customer.h  CyberCafeManagementServer.def  CyberCafeManagementServer.exp  Helper.cpp  Helper.h  Owner.h  User.cpp  User.h
Code/Server/AllFiles/: Computer.h  Customer.cpp  CyberCafeManagementServer.cpp  Owner.cpp
Code/Server/Linking/01-ImplicitLinking/01-LibOnCmd/: ClientOfCyberCafeManagementSystem.cpp  cybercafemanagementsystem.db
Code/Server/Linking/01-ImplicitLinking/02-LibInPragma/: ClientOfCyberCafeManagementSystem.cpp  CyberCafeManagementServer.h  CyberCafeManagementServer.lib
Code/Server/Linking/02-ExplicitLinking/: ClientOfCyberCafeManagementSystem.cpp  cybercafemanagementsystem.db
Documents/: Assembly Code.docx  Class Diagram Symbols.docx  Cmake And Make Document.docx  Cyber_Cafe_Management_Project_Synopsis.docx  Debugging.docx  DebugvsRelease.docx  EXECUTION(CCMS).docx  Memory Leak Detection.docx  Sequence diagram symbols.docx  Static Dynamic.docx  Use Case Diagram Symbols.docx
